--- a/main/Kconfig
+++ b/main/Kconfig
@@ -4,7 +4,7 @@ choice SR_MODEL_SEL
 	prompt "Wake word engine"
 	default SR_MODEL_WN5_QUANT
 	help
-		Select the keyword spotting model to be used.
+		Select the Wake Word Engine to be used.
 
 config SR_MODEL_WN3_QUANT
 	bool "WakeNet 3 (quantized)"
@@ -43,7 +43,7 @@ config SR_WN5_CUSTOMIZED_WORD
 	depends on SR_MODEL_WN5_QUANT || SR_MODEL_WN5_FLOAT 
 
 config SR_WN6_HILEXIN
-	bool "hilexin (WakeNet6)"
+	bool "nihaoxiaoxin (WakeNet6)"
 	depends on SR_MODEL_WN6_QUANT
 
 config SR_WN6_CUSTOMIZED_WORD
@@ -53,27 +53,436 @@ config SR_WN6_CUSTOMIZED_WORD
 endchoice
 
 choice SR_MN_MODEL_SEL
-	prompt "speech commands recognition model to use"
-	default CONFIG_MN1_MODEL_QUANT
-	help
-		Select the model to be used.
+    prompt "speech commands recognition model to use"
+    default CONFIG_MN1_MODEL_FLOAT
+    help
+        Select the model to be used.
 
 config SR_MN1_MODEL_QUANT
-	bool "MultiNet 1 (quantized)"
+    bool "MultiNet 1 (quantized)"
 
 endchoice
 
 choice SR_LANGUAGE_SEL
-	prompt "langugae"
-	default SR_MN1_CHINESE
-	help
-		Select the language to be used.
+    prompt "langugae"
+    default SR_MN1_CHINESE
+    help
+        Select the language to be used.
 
 config SR_MN1_CHINESE_QUANT
-	bool "chinese (MultiNet1)"
-	depends on SR_MN1_MODEL_QUANT
+    bool "chinese (MultiNet1)"
+    depends on SR_MN1_MODEL_QUANT
 
 endchoice
 
+config SPEECH_COMMANDS_NUM
+    int "The number of speech commands"
+    default 0
+    help
+	The number of the speech commands.
+
+menu "Add speech commands"
+
+config SPEECH_COMMAND_ID0
+    string "ID0"
+	default ""
+
+config SPEECH_COMMAND_ID1
+    string "ID1"
+	default ""
+
+config SPEECH_COMMAND_ID2
+    string "ID2"
+	default ""
+
+config SPEECH_COMMAND_ID3
+    string "ID3"
+    default ""
+
+config SPEECH_COMMAND_ID4
+    string "ID4"
+    default ""
+
+config SPEECH_COMMAND_ID5
+    string "ID5"
+    default ""
+
+config SPEECH_COMMAND_ID6
+    string "ID6"
+    default ""
+
+config SPEECH_COMMAND_ID7
+    string "ID7"
+    default ""
+
+config SPEECH_COMMAND_ID8
+    string "ID8"
+    default ""
+
+config SPEECH_COMMAND_ID9
+    string "ID9"
+    default ""
+
+config SPEECH_COMMAND_ID10
+    string "ID10"
+    default ""
+
+config SPEECH_COMMAND_ID11
+    string "ID11"
+    default ""
+
+config SPEECH_COMMAND_ID12
+    string "ID12"
+    default ""
+
+config SPEECH_COMMAND_ID13
+    string "ID13"
+    default ""
+
+config SPEECH_COMMAND_ID14
+    string "ID14"
+    default ""
+
+config SPEECH_COMMAND_ID15
+    string "ID15"
+    default ""
+
+config SPEECH_COMMAND_ID16
+    string "ID16"
+    default ""
+
+config SPEECH_COMMAND_ID17
+    string "ID17"
+    default ""
+
+config SPEECH_COMMAND_ID18
+    string "ID18"
+    default ""
+
+config SPEECH_COMMAND_ID19
+    string "ID19"
+    default ""
+
+config SPEECH_COMMAND_ID20
+    string "ID20"
+	default ""
+
+config SPEECH_COMMAND_ID21
+    string "ID21"
+	default ""
+
+config SPEECH_COMMAND_ID22
+    string "ID22"
+	default ""
+
+config SPEECH_COMMAND_ID23
+    string "ID23"
+	default ""
+
+config SPEECH_COMMAND_ID24
+    string "ID24"
+	default ""
+
+config SPEECH_COMMAND_ID25
+    string "ID25"
+	default ""
+
+config SPEECH_COMMAND_ID26
+    string "ID26"
+	default ""
+
+config SPEECH_COMMAND_ID27
+    string "ID27"
+	default ""
+
+config SPEECH_COMMAND_ID28
+    string "ID28"
+	default ""
+
+config SPEECH_COMMAND_ID29
+    string "ID29"
+	default ""
+
+config SPEECH_COMMAND_ID30
+    string "ID30"
+	default ""
+
+config SPEECH_COMMAND_ID31
+    string "ID31"
+	default ""
+
+config SPEECH_COMMAND_ID32
+    string "ID32"
+	default ""
+
+config SPEECH_COMMAND_ID33
+    string "ID33"
+	default ""
+
+config SPEECH_COMMAND_ID34
+    string "ID34"
+	default ""
+
+config SPEECH_COMMAND_ID35
+    string "ID35"
+	default ""
+
+config SPEECH_COMMAND_ID36
+    string "ID36"
+	default ""
+
+config SPEECH_COMMAND_ID37
+    string "ID37"
+	default ""
+
+config SPEECH_COMMAND_ID38
+    string "ID38"
+	default ""
+
+config SPEECH_COMMAND_ID39
+    string "ID39"
+	default ""
+
+config SPEECH_COMMAND_ID40
+    string "ID40"
+	default ""
+
+config SPEECH_COMMAND_ID41
+    string "ID41"
+	default ""
+
+config SPEECH_COMMAND_ID42
+    string "ID42"
+	default ""
+
+config SPEECH_COMMAND_ID43
+    string "ID43"
+	default ""
+
+config SPEECH_COMMAND_ID44
+    string "ID44"
+	default ""
+
+config SPEECH_COMMAND_ID45
+    string "ID45"
+	default ""
+
+config SPEECH_COMMAND_ID46
+    string "ID46"
+	default ""
+
+config SPEECH_COMMAND_ID47
+    string "ID47"
+	default ""
+
+config SPEECH_COMMAND_ID48
+    string "ID48"
+	default ""
+
+config SPEECH_COMMAND_ID49
+    string "ID49"
+	default ""
+
+config SPEECH_COMMAND_ID50
+    string "ID50"
+	default ""
+
+config SPEECH_COMMAND_ID51
+    string "ID51"
+	default ""
+
+config SPEECH_COMMAND_ID52
+    string "ID52"
+	default ""
+
+config SPEECH_COMMAND_ID53
+    string "ID53"
+	default ""
+
+config SPEECH_COMMAND_ID54
+    string "ID54"
+	default ""
+
+config SPEECH_COMMAND_ID55
+    string "ID55"
+	default ""
+
+config SPEECH_COMMAND_ID56
+    string "ID56"
+	default ""
+
+config SPEECH_COMMAND_ID57
+    string "ID57"
+	default ""
+
+config SPEECH_COMMAND_ID58
+    string "ID58"
+	default ""
+
+config SPEECH_COMMAND_ID59
+    string "ID59"
+	default ""
+
+config SPEECH_COMMAND_ID60
+    string "ID60"
+	default ""
+
+config SPEECH_COMMAND_ID61
+    string "ID61"
+	default ""
+
+config SPEECH_COMMAND_ID62
+    string "ID62"
+	default ""
+
+config SPEECH_COMMAND_ID63
+    string "ID63"
+	default ""
+
+config SPEECH_COMMAND_ID64
+    string "ID64"
+	default ""
+
+config SPEECH_COMMAND_ID65
+    string "ID65"
+	default ""
+
+config SPEECH_COMMAND_ID66
+    string "ID66"
+	default ""
+
+config SPEECH_COMMAND_ID67
+    string "ID67"
+	default ""
+
+config SPEECH_COMMAND_ID68
+    string "ID68"
+	default ""
+
+config SPEECH_COMMAND_ID69
+    string "ID69"
+	default ""
+
+config SPEECH_COMMAND_ID70
+    string "ID70"
+    default ""
+
+config SPEECH_COMMAND_ID71
+    string "ID71"
+    default ""
+
+config SPEECH_COMMAND_ID72
+    string "ID72"
+    default ""
+
+config SPEECH_COMMAND_ID73
+    string "ID73"
+    default ""
+
+config SPEECH_COMMAND_ID74
+    string "ID74"
+    default ""
+
+config SPEECH_COMMAND_ID75
+    string "ID75"
+    default ""
+
+config SPEECH_COMMAND_ID76
+    string "ID76"
+    default ""
+
+config SPEECH_COMMAND_ID77
+    string "ID77"
+    default ""
+
+config SPEECH_COMMAND_ID78
+    string "ID78"
+    default ""
+
+config SPEECH_COMMAND_ID79
+    string "ID79"
+    default ""
+
+config SPEECH_COMMAND_ID80
+    string "ID80"
+    default ""
+
+config SPEECH_COMMAND_ID81
+    string "ID81"
+    default ""
+
+config SPEECH_COMMAND_ID82
+    string "ID82"
+    default ""
+
+config SPEECH_COMMAND_ID83
+    string "ID83"
+    default ""
+
+config SPEECH_COMMAND_ID84
+    string "ID84"
+    default ""
+
+config SPEECH_COMMAND_ID85
+    string "ID85"
+    default ""
+
+config SPEECH_COMMAND_ID86
+    string "ID86"
+    default ""
+
+config SPEECH_COMMAND_ID87
+    string "ID87"
+    default ""
+
+config SPEECH_COMMAND_ID88
+    string "ID88"
+    default ""
+
+config SPEECH_COMMAND_ID89
+    string "ID89"
+    default ""
+
+config SPEECH_COMMAND_ID90
+    string "ID90"
+    default ""
+
+config SPEECH_COMMAND_ID91
+    string "ID91"
+    default ""
+
+config SPEECH_COMMAND_ID92
+    string "ID92"
+    default ""
+
+config SPEECH_COMMAND_ID93
+    string "ID93"
+    default ""
+
+config SPEECH_COMMAND_ID94
+    string "ID94"
+    default ""
+
+config SPEECH_COMMAND_ID95
+    string "ID95"
+    default ""
+
+config SPEECH_COMMAND_ID96
+    string "ID96"
+    default ""
+
+config SPEECH_COMMAND_ID97
+    string "ID97"
+    default ""
+
+config SPEECH_COMMAND_ID98
+    string "ID98"
+    default ""
+
+config SPEECH_COMMAND_ID99
+    string "ID99"
+    default ""
+
+endmenu
 
 endmenu
