--- a/main/Kconfig
+++ b/main/Kconfig
@@ -41,6 +41,10 @@ config SR_MODEL_WN7_QUANT8
 	bool "WakeNet 7 (quantized with 8-bit)"
     depends on IDF_TARGET_ESP32S3
 
+config SR_MODEL_WN8_QUANT
+	bool "WakeNet 8 (quantized with 16-bit)"
+    depends on IDF_TARGET_ESP32S3
+
 endchoice
 
 
@@ -109,6 +113,10 @@ config SR_WN7_ALEXA
 config SR_WN7_HILEXIN
     bool "hilexin (WakeNet7)"
     depends on SR_MODEL_WN7_QUANT
+
+config SR_WN8_ALEXA
+	bool "Alexa (WakeNet8)"
+	depends on SR_MODEL_WN8_QUANT || SR_MODEL_WN8_QUANT8
 
 endchoice
 
@@ -673,162 +681,162 @@ config CN_SPEECH_COMMAND_ID99
 config EN_SPEECH_COMMAND_ID0
     string "ID0"
     depends on SR_ENGLISH
-    default "T ER N AA N DH AH L AY T"
+    default "T,f,L, ,M,m, ,c, ,q,b,K"
 
 config EN_SPEECH_COMMAND_ID1
     string "ID1"
     depends on SR_ENGLISH
-    default "T ER N AO F DH AH L AY T"
+    default "S,g,l, ,c, ,S,e,l"
 
 config EN_SPEECH_COMMAND_ID2
     string "ID2"
     depends on SR_ENGLISH
-    default "L AY T IH NG M OW D"
+    default "P,L,d, ,N,o,Z, ,p,a,N,c,L"
 
 config EN_SPEECH_COMMAND_ID3
     string "ID3"
     depends on SR_ENGLISH
-    default "R EH D IH NG M OW D"
+    default "T,k,N, ,n,N, ,M,i, ,S,t,N,D,B,n,K,S"
 
 config EN_SPEECH_COMMAND_ID4
     string "ID4"
     depends on SR_ENGLISH
-    default "R EH D M OW D"
+    default "T,k,N, ,e,F, ,M,i, ,S,t,N,D,B,n,K,S"
 
 config EN_SPEECH_COMMAND_ID5
     string "ID5"
     depends on SR_ENGLISH
-    default "B L UW M OW D"
+    default "h,i,c,S,T, ,V,n,L,Y,o,M"
 
 config EN_SPEECH_COMMAND_ID6
     string "ID6"
     depends on SR_ENGLISH
-    default "Y EH L OW M OW D"
+    default "L,b,c,S,T, ,V,n,L,Y,o,M"
 
 config EN_SPEECH_COMMAND_ID7
     string "ID7"
     depends on SR_ENGLISH
-    default ""
+    default "g,N,K,R,m,S, ,j,c, ,V,n,L,Y,o,M"
 
 config EN_SPEECH_COMMAND_ID8
     string "ID8"
     depends on SR_ENGLISH
-    default ""
+    default "D,g,K,R,m,S, ,j,c, ,V,n,L,Y,o,M"
 
 config EN_SPEECH_COMMAND_ID9
     string "ID9"
     depends on SR_ENGLISH
-    default ""
+    default "T,k,N, ,n,N, ,j,c, ,T,m,V,m"
 
 config EN_SPEECH_COMMAND_ID10
     string "ID10"
     depends on SR_ENGLISH
-    default ""
+    default "T,k,N, ,e,F, ,j,c, ,T,m,V,m"
 
 config EN_SPEECH_COMMAND_ID11
     string "ID11"
     depends on SR_ENGLISH
-    default ""
+    default "M,d,K, ,M,m, ,c, ,T,m"
 
 config EN_SPEECH_COMMAND_ID12
     string "ID12"
     depends on SR_ENGLISH
-    default ""
+    default "M,d,K, ,M,m, ,c, ,K,n,F,m"
 
 config EN_SPEECH_COMMAND_ID13
     string "ID13"
     depends on SR_ENGLISH
-    default ""
+    default "T,k,N, ,n,N, ,j,c, ,L,i,T"
 
 config EN_SPEECH_COMMAND_ID14
     string "ID14"
     depends on SR_ENGLISH
-    default ""
+    default "T,k,N, ,e,F, ,j,c, ,L,i,T"
 
 config EN_SPEECH_COMMAND_ID15
     string "ID15"
     depends on SR_ENGLISH
-    default ""
+    default "p,d,N,q, ,j,c, ,K,c,L,k, ,T,o, ,R,f,D"
 
 config EN_SPEECH_COMMAND_ID16
     string "ID16"
     depends on SR_ENGLISH
-    default ""
+    default "p,d,N,q, ,j,c, ,K,c,L,k, ,T,o, ,G,R,m,N"
 
 config EN_SPEECH_COMMAND_ID17
     string "ID17"
     depends on SR_ENGLISH
-    default ""
+    default "T,k,N, ,n,N, ,e,L, ,j,c, ,L,i,T,S"
 
 config EN_SPEECH_COMMAND_ID18
     string "ID18"
     depends on SR_ENGLISH
-    default ""
+    default "T,k,N, ,e,F, ,e,L, ,j,c, ,L,i,T,S"
 
 config EN_SPEECH_COMMAND_ID19
     string "ID19"
     depends on SR_ENGLISH
-    default ""
+    default "T,k,N, ,n,N, ,j,c, ,f,R, ,K,c,N,D,g,s,c,N,k"
 
 config EN_SPEECH_COMMAND_ID20
     string "ID20"
     depends on SR_ENGLISH
-    default ""
+    default "T,k,N, ,e,F, ,j,c, ,f,R, ,K,c,N,D,g,s,c,N,k"
 
 config EN_SPEECH_COMMAND_ID21
     string "ID21"
     depends on SR_ENGLISH
-    default ""
+    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,S,g,K,S,T,m,N, ,D,g,G,R,m,Z"
 
 config EN_SPEECH_COMMAND_ID22
     string "ID22"
     depends on SR_ENGLISH
-    default ""
+    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,S,f,V,c,N,T,m,N, ,D,g,G,R,m,Z"
 
 config EN_SPEECH_COMMAND_ID23
     string "ID23"
     depends on SR_ENGLISH
-    default ""
+    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,d,T,m,N, ,D,g,G,R,m,Z"
 
 config EN_SPEECH_COMMAND_ID24
     string "ID24"
     depends on SR_ENGLISH
-    default ""
+    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,N,i,N,T,m,N, ,D,g,G,R,m,Z"
 
 config EN_SPEECH_COMMAND_ID25
     string "ID25"
     depends on SR_ENGLISH
-    default ""
+    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,D,g,G,R,m,Z"
 
 config EN_SPEECH_COMMAND_ID26
     string "ID26"
     depends on SR_ENGLISH
-    default ""
+    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,W,c,N, ,D,g,G,R,m,Z"
 
 config EN_SPEECH_COMMAND_ID27
     string "ID27"
     depends on SR_ENGLISH
-    default ""
+    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,T,o, ,D,g,G,R,m,Z"
 
 config EN_SPEECH_COMMAND_ID28
     string "ID28"
     depends on SR_ENGLISH
-    default ""
+    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,v,R,m, ,D,g,G,R,m,Z"
 
 config EN_SPEECH_COMMAND_ID29
     string "ID29"
     depends on SR_ENGLISH
-    default ""
+    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,F,e,R, ,D,g,G,R,m,Z"
 
 config EN_SPEECH_COMMAND_ID30
     string "ID30"
     depends on SR_ENGLISH
-    default ""
+    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,F,i,V, ,D,g,G,R,m,Z"
 
 config EN_SPEECH_COMMAND_ID31
     string "ID31"
     depends on SR_ENGLISH
-    default ""
+    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,S,g,K,S, ,D,g,G,R,m,Z"
 
 config EN_SPEECH_COMMAND_ID32
     string "ID32"
