--- a/main/Kconfig
+++ b/main/Kconfig
@@ -148,12 +148,12 @@ config EN_MULTINET3_SINGLE_RECOGNITION
     bool "english single recognition (MultiNet3)"
     depends on SR_ENGLISH && IDF_TARGET_ESP32
 
-config EN_MULTINET5_SINGLE_RECOGNITION
-    bool "english single recognition (MultiNet5)"
-    depends on SR_ENGLISH && IDF_TARGET_ESP32S3
-
 config EN_MULTINET5_SINGLE_RECOGNITION_QUANT8
     bool "english single recognition (MultiNet5 quantized with 8-bit)"
+    depends on SR_ENGLISH && IDF_TARGET_ESP32S3
+    
+config EN_MULTINET5_SINGLE_RECOGNITION
+    bool "english single recognition (MultiNet5)"
     depends on SR_ENGLISH && IDF_TARGET_ESP32S3
 
 config CN_MULTINET2_SINGLE_RECOGNITION
@@ -685,162 +685,162 @@ config CN_SPEECH_COMMAND_ID99
 config EN_SPEECH_COMMAND_ID0
     string "ID0"
     depends on SR_ENGLISH
-    default "T,f,L, ,M,m, ,c, ,q,b,K"
+    default "TfL Mm c qbK"
 
 config EN_SPEECH_COMMAND_ID1
     string "ID1"
     depends on SR_ENGLISH
-    default "S,g,l, ,c, ,S,e,l"
+    default "Sgl c Sel"
 
 config EN_SPEECH_COMMAND_ID2
     string "ID2"
     depends on SR_ENGLISH
-    default "P,L,d, ,N,o,Z, ,p,a,N,c,L"
+    default "PLd NoZ paNcL"
 
 config EN_SPEECH_COMMAND_ID3
     string "ID3"
     depends on SR_ENGLISH
-    default "T,k,N, ,n,N, ,M,i, ,S,t,N,D,B,n,K,S"
+    default "TkN nN Mi StNDBnKS"
 
 config EN_SPEECH_COMMAND_ID4
     string "ID4"
     depends on SR_ENGLISH
-    default "T,k,N, ,e,F, ,M,i, ,S,t,N,D,B,n,K,S"
+    default "TkN eF Mi StNDBnKS"
 
 config EN_SPEECH_COMMAND_ID5
     string "ID5"
     depends on SR_ENGLISH
-    default "h,i,c,S,T, ,V,n,L,Y,o,M"
+    default "hicST VnLYoM"
 
 config EN_SPEECH_COMMAND_ID6
     string "ID6"
     depends on SR_ENGLISH
-    default "L,b,c,S,T, ,V,n,L,Y,o,M"
+    default "LbcST VnLYoM"
 
 config EN_SPEECH_COMMAND_ID7
     string "ID7"
     depends on SR_ENGLISH
-    default "g,N,K,R,m,S, ,j,c, ,V,n,L,Y,o,M"
+    default "gNKRmS jc VnLYoM"
 
 config EN_SPEECH_COMMAND_ID8
     string "ID8"
     depends on SR_ENGLISH
-    default "D,g,K,R,m,S, ,j,c, ,V,n,L,Y,o,M"
+    default "DgKRmS jc VnLYoM"
 
 config EN_SPEECH_COMMAND_ID9
     string "ID9"
     depends on SR_ENGLISH
-    default "T,k,N, ,n,N, ,j,c, ,T,m,V,m"
+    default "TkN nN jc TmVm"
 
 config EN_SPEECH_COMMAND_ID10
     string "ID10"
     depends on SR_ENGLISH
-    default "T,k,N, ,e,F, ,j,c, ,T,m,V,m"
+    default "TkN eF jc TmVm"
 
 config EN_SPEECH_COMMAND_ID11
     string "ID11"
     depends on SR_ENGLISH
-    default "M,d,K, ,M,m, ,c, ,T,m"
+    default "MdK Mm c Tm"
 
 config EN_SPEECH_COMMAND_ID12
     string "ID12"
     depends on SR_ENGLISH
-    default "M,d,K, ,M,m, ,c, ,K,n,F,m"
+    default "MdK Mm c KnFm"
 
 config EN_SPEECH_COMMAND_ID13
     string "ID13"
     depends on SR_ENGLISH
-    default "T,k,N, ,n,N, ,j,c, ,L,i,T"
+    default "TkN nN jc LiT"
 
 config EN_SPEECH_COMMAND_ID14
     string "ID14"
     depends on SR_ENGLISH
-    default "T,k,N, ,e,F, ,j,c, ,L,i,T"
+    default "TkN eF jc LiT"
 
 config EN_SPEECH_COMMAND_ID15
     string "ID15"
     depends on SR_ENGLISH
-    default "p,d,N,q, ,j,c, ,K,c,L,k, ,T,o, ,R,f,D"
+    default "pdNq jc KcLk To RfD"
 
 config EN_SPEECH_COMMAND_ID16
     string "ID16"
     depends on SR_ENGLISH
-    default "p,d,N,q, ,j,c, ,K,c,L,k, ,T,o, ,G,R,m,N"
+    default "pdNq jc KcLk To GRmN"
 
 config EN_SPEECH_COMMAND_ID17
     string "ID17"
     depends on SR_ENGLISH
-    default "T,k,N, ,n,N, ,e,L, ,j,c, ,L,i,T,S"
+    default "TkN nN eL jc LiTS"
 
 config EN_SPEECH_COMMAND_ID18
     string "ID18"
     depends on SR_ENGLISH
-    default "T,k,N, ,e,F, ,e,L, ,j,c, ,L,i,T,S"
+    default "TkN eF eL jc LiTS"
 
 config EN_SPEECH_COMMAND_ID19
     string "ID19"
     depends on SR_ENGLISH
-    default "T,k,N, ,n,N, ,j,c, ,f,R, ,K,c,N,D,g,s,c,N,k"
+    default "TkN nN jc fR KcNDgscNk"
 
 config EN_SPEECH_COMMAND_ID20
     string "ID20"
     depends on SR_ENGLISH
-    default "T,k,N, ,e,F, ,j,c, ,f,R, ,K,c,N,D,g,s,c,N,k"
+    default "TkN eF jc fR KcNDgscNk"
 
 config EN_SPEECH_COMMAND_ID21
     string "ID21"
     depends on SR_ENGLISH
-    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,S,g,K,S,T,m,N, ,D,g,G,R,m,Z"
+    default "SfT jc TfMPRcpk To SgKSTmN DgGRmZ"
 
 config EN_SPEECH_COMMAND_ID22
     string "ID22"
     depends on SR_ENGLISH
-    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,S,f,V,c,N,T,m,N, ,D,g,G,R,m,Z"
+    default "SfT jc TfMPRcpk To SfVcNTmN DgGRmZ"
 
 config EN_SPEECH_COMMAND_ID23
     string "ID23"
     depends on SR_ENGLISH
-    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,d,T,m,N, ,D,g,G,R,m,Z"
+    default "SfT jc TfMPRcpk To dTmN DgGRmZ"
 
 config EN_SPEECH_COMMAND_ID24
     string "ID24"
     depends on SR_ENGLISH
-    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,N,i,N,T,m,N, ,D,g,G,R,m,Z"
+    default "SfT jc TfMPRcpk To NiNTmN DgGRmZ"
 
 config EN_SPEECH_COMMAND_ID25
     string "ID25"
     depends on SR_ENGLISH
-    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,D,g,G,R,m,Z"
+    default "SfT jc TfMPRcpk To TWfNTm DgGRmZ"
 
 config EN_SPEECH_COMMAND_ID26
     string "ID26"
     depends on SR_ENGLISH
-    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,W,c,N, ,D,g,G,R,m,Z"
+    default "SfT jc TfMPRcpk To TWfNTm WcN DgGRmZ"
 
 config EN_SPEECH_COMMAND_ID27
     string "ID27"
     depends on SR_ENGLISH
-    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,T,o, ,D,g,G,R,m,Z"
+    default "SfT jc TfMPRcpk To TWfNTm To DgGRmZ"
 
 config EN_SPEECH_COMMAND_ID28
     string "ID28"
     depends on SR_ENGLISH
-    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,v,R,m, ,D,g,G,R,m,Z"
+    default "SfT jc TfMPRcpk To TWfNTm vRm DgGRmZ"
 
 config EN_SPEECH_COMMAND_ID29
     string "ID29"
     depends on SR_ENGLISH
-    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,F,e,R, ,D,g,G,R,m,Z"
+    default "SfT jc TfMPRcpk To TWfNTm FeR DgGRmZ"
 
 config EN_SPEECH_COMMAND_ID30
     string "ID30"
     depends on SR_ENGLISH
-    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,F,i,V, ,D,g,G,R,m,Z"
+    default "SfT jc TfMPRcpk To TWfNTm FiV DgGRmZ"
 
 config EN_SPEECH_COMMAND_ID31
     string "ID31"
     depends on SR_ENGLISH
-    default "S,f,T, ,j,c, ,T,f,M,P,R,c,p,k, ,T,o, ,T,W,f,N,T,m, ,S,g,K,S, ,D,g,G,R,m,Z"
+    default "SfT jc TfMPRcpk To TWfNTm SgKS DgGRmZ"
 
 config EN_SPEECH_COMMAND_ID32
     string "ID32"
