feat(model): Support models in spiffs partitions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,18 @@ set(COMPONENT_REQUIRES
 
 register_component()
 
+set(MVMODEL_EXE ${COMPONENT_PATH}/model/movemodel.py)
+
+add_custom_command(
+     OUTPUT ${COMPONENT_DIR}/model/target/_MODEL_INFO_
+     COMMENT "Running move model..."
+     COMMAND python ${MVMODEL_EXE} -d1 ${PROJECT_DIR} -d2 ${COMPONENT_PATH}
+     DEPENDS ${COMPONENT_DIR}/model/
+     VERBATIM)
+
+add_custom_target(model DEPENDS ${COMPONENT_DIR}/model/target/_MODEL_INFO_)
+add_dependencies(${COMPONENT_LIB} model)
+
 target_link_libraries(${COMPONENT_TARGET} "-L ${CMAKE_CURRENT_SOURCE_DIR}/lib")
 target_link_libraries(${COMPONENT_TARGET} "-L ${CMAKE_CURRENT_SOURCE_DIR}/wake_word_engine")
 target_link_libraries(${COMPONENT_TARGET} "-L ${CMAKE_CURRENT_SOURCE_DIR}/speech_command_recognition")
@@ -31,6 +43,8 @@ ENDIF (IDF_VER MATCHES "v4.")
 add_prebuilt_library(multinet "${CMAKE_CURRENT_SOURCE_DIR}/lib/libmultinet.a" PRIV_REQUIRES esp-sr) 
 
 add_prebuilt_library(esp_audio_front_end "${CMAKE_CURRENT_SOURCE_DIR}/audio_front_end/libesp_audio_front_end.a" PRIV_REQUIRES esp-sr) 
+
+add_prebuilt_library(hufzip "${CMAKE_CURRENT_SOURCE_DIR}/lib/libhufzip.a" PRIV_REQUIRES esp-sr) 
 
 if(IDF_TARGET STREQUAL "esp32")
 target_link_libraries(${COMPONENT_TARGET} "-Wl,--start-group"
@@ -62,20 +76,13 @@ endif()
 if(IDF_TARGET STREQUAL "esp32s3")
 target_link_libraries(${COMPONENT_TARGET} "-Wl,--start-group"
     wakenet
-    hilexin_wn7
-    xiaoaitongxue_wn7
-    xiaoaitongxue_wn7_q8
-    alexa_wn7
-    alexa_wn7_q8
-    alexa_wn8
-    customized_word_wn7
+    hufzip
     dl_lib_esp32s3
     c_speech_features
     esp_audio_front_end
     esp_audio_processor
     multinet
-    multinet5_en
-    multinet5_en_q8
-    multinet3_ch
     "-Wl,--end-group")
 endif()
+
+spiffs_create_partition_image(model ${COMPONENT_DIR}/model/target FLASH_IN_PROJECT DEPENDS ${COMPONENT_DIR}/model/target/_MODEL_INFO_)
