--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,17 +15,32 @@ set(COMPONENT_REQUIRES
 register_component()
 if(IDF_TARGET STREQUAL "esp32")
     target_link_libraries(${COMPONENT_TARGET} "-L ${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32")
+    target_link_libraries(${COMPONENT_TARGET} "-L ${CMAKE_CURRENT_SOURCE_DIR}/esp-tts/esp_tts_chinese")
+
     add_prebuilt_library(esp_audio_processor "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32/libesp_audio_processor.a" PRIV_REQUIRES esp-sr)
     add_prebuilt_library(wakenet "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32/libwakenet.a" PRIV_REQUIRES esp-sr)
     add_prebuilt_library(multinet "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32/libmultinet.a" PRIV_REQUIRES esp-sr)
     add_prebuilt_library(esp_audio_front_end "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32/libesp_audio_front_end.a" PRIV_REQUIRES esp-sr)
-    add_prebuilt_library(hufzip "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32/libhufzip.a" PRIV_REQUIRES esp-sr)
-    # TTS
     target_link_libraries(${COMPONENT_TARGET} "-Wl,--start-group"
-        esp_tts_chinese_esp32s2 
-        voice_set_xiaole_esp32s2
-        voice_set_template_esp32s2
-         "-Wl,--end-group")
+        wakenet
+        dl_lib
+        c_speech_features
+        hilexin_wn5
+        hilexin_wn5X2
+        hilexin_wn5X3
+        nihaoxiaozhi_wn5
+        nihaoxiaozhi_wn5X2
+        nihaoxiaozhi_wn5X3
+        nihaoxiaoxin_wn5X3
+        customized_word_wn5
+        multinet
+        multinet2_ch
+        esp_audio_processor 
+        esp_audio_front_end 
+        esp_tts_chinese 
+        voice_set_xiaole 
+        voice_set_template
+        "-Wl,--end-group")
 elseif(${IDF_TARGET} STREQUAL "esp32s2")
     target_link_libraries(${COMPONENT_TARGET} "-Wl,--start-group"
         esp_tts_chinese_esp32s2 
@@ -34,6 +49,7 @@ elseif(${IDF_TARGET} STREQUAL "esp32s2")
          "-Wl,--end-group")
 elseif(${IDF_TARGET} STREQUAL "esp32s3")
     target_link_libraries(${COMPONENT_TARGET} "-L ${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32s3")
+
     add_prebuilt_library(esp_audio_processor "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32s3/libesp_audio_processor.a" PRIV_REQUIRES esp-sr)
     add_prebuilt_library(wakenet "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32s3/libwakenet.a" PRIV_REQUIRES esp-sr)
     add_prebuilt_library(multinet "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32s3/libmultinet.a" PRIV_REQUIRES esp-sr)
