system(ESP32): Support ESP32 in IDF V3_3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,13 +17,15 @@ register_component()
 if(IDF_TARGET STREQUAL "esp32")
     target_link_libraries(${COMPONENT_TARGET} "-L ${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32")
     target_link_libraries(${COMPONENT_TARGET} "-L ${CMAKE_CURRENT_SOURCE_DIR}/esp-tts/esp_tts_chinese")
-
+IF (IDF_VERSION_MAJOR GREATER 3)
     add_prebuilt_library(esp_audio_processor "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32/libesp_audio_processor.a" PRIV_REQUIRES esp-sr)
     add_prebuilt_library(wakenet "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32/libwakenet.a" PRIV_REQUIRES esp-sr)
     add_prebuilt_library(multinet "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32/libmultinet.a" PRIV_REQUIRES esp-sr)
     add_prebuilt_library(esp_audio_front_end "${CMAKE_CURRENT_SOURCE_DIR}/lib/esp32/libesp_audio_front_end.a" PRIV_REQUIRES esp-sr)
+ENDIF (IDF_VERSION_MAJOR GREATER 3)
     target_link_libraries(${COMPONENT_TARGET} "-Wl,--start-group"
         wakenet
+        multinet
         dl_lib
         c_speech_features
         hilexin_wn5
@@ -34,13 +36,9 @@ if(IDF_TARGET STREQUAL "esp32")
         nihaoxiaozhi_wn5X3
         nihaoxiaoxin_wn5X3
         customized_word_wn5
-        multinet
         multinet2_ch
         esp_audio_processor 
         esp_audio_front_end 
-        esp_tts_chinese 
-        voice_set_xiaole 
-        voice_set_template
         "-Wl,--end-group")
 elseif(${IDF_TARGET} STREQUAL "esp32s2")
     target_link_libraries(${COMPONENT_TARGET} "-L ${CMAKE_CURRENT_SOURCE_DIR}/esp-tts/esp_tts_chinese")
@@ -68,7 +66,6 @@ elseif(${IDF_TARGET} STREQUAL "esp32s3")
         multinet
         "-Wl,--end-group")
 
-    if(CONFIG_MODEL_IN_SPIFFS AND CONFIG_USE_WAKENET)
         set(MVMODEL_EXE ${COMPONENT_PATH}/model/movemodel.py)
         add_custom_command(
              OUTPUT ${COMPONENT_DIR}/model/target/_MODEL_INFO_
@@ -79,7 +76,7 @@ elseif(${IDF_TARGET} STREQUAL "esp32s3")
 
         add_custom_target(model DEPENDS ${COMPONENT_DIR}/model/target/_MODEL_INFO_)
         add_dependencies(${COMPONENT_LIB} model)
-
+    if(CONFIG_MODEL_IN_SPIFFS AND CONFIG_USE_WAKENET)
         spiffs_create_partition_image(model ${COMPONENT_DIR}/model/target FLASH_IN_PROJECT DEPENDS ${COMPONENT_DIR}/model/target/_MODEL_INFO_)
     endif()
 endif()
