--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,26 @@
+# VS Code Settings
+.vscode/
+
+include/config
+include/sdkconfig.h
 build/
 sdkconfig.old
 sdkconfig
-model/target/*
-.vscode
-docs/_build/*
+.DS_Store
+
+*.pyc
+
+# Doc build artifacts
+docs/_build/
+docs/*/_build/
+docs/*/doxygen-warning-log.txt
+docs/*/sphinx-warning-log.txt
+docs/*/sphinx-warning-log-sanitized.txt
+docs/*/xml/
+docs/*/xml_in/
+docs/*/man/
+docs/doxygen_sqlite3.db
+
+# Downloaded font files
+docs/_static/DejaVuSans.ttf
+docs/_static/NotoSansSC-Regular.otf
